--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="icon" href="data:," />
+		<link rel="stylesheet" href="styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
+		<div id="game-containter">
+			<h1>じゃんけん</h1>
+			<div id="game-choices">
+				<button id="rock"><span class="emoji">🪨 </span><br />グー</button>
+				<button id="scissors"><span class="emoji">✂️</span><br />チョキ</button>
+				<button id="paper"><span class="emoji">🧻</span><br />パー</button>
+			</div>
+			<button id="start" class="clickable">start the game</button>
+			<div id="scoreboard">
+				<h2>スコア: <span id="human">0</span>–<span id="ai">0</span></h2>
+				<h3 id="outcome"></h3>
+				<button id="end" class="clickable">i'm done</button>
+			</div>
+		</div>
 		<script src="index.js"></script>
 	</body>
 </html>
